<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily"
            android:summary="@string/turn_on_off"
            android:title="@string/reminder_daily" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_relase"
            android:summary="@string/turn_on_off"
            android:title="@string/reminder_release" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/language">

        <PreferenceScreen
            android:key="@string/key_language"
            android:summary="@string/summary_change_language"
            android:title="@string/change_language" />

    </PreferenceCategory>
</PreferenceScreen>
